[gd_scene load_steps=4 format=1]

[ext_resource path="res://planet/planet.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=54]

custom_solver_bias = 0.0
radius = 224.0

[sub_resource type="CircleShape2D" id=55]

custom_solver_bias = 0.0
radius = 339.579

[node name="planet" type="StaticBody2D" groups=[
"planets",
]]

input/pickable = false
shapes/0/shape = SubResource( 54 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 1 )
gravity_speed = 80

[node name="sprite" type="Sprite" parent="."]

[node name="collision" type="CollisionShape2D" parent="."]

shape = SubResource( 54 )
trigger = false
_update_shape_index = 0

[node name="gravity_zone" type="Area2D" parent="."]

transform/pos = Vector2( 1.22772, 0 )
input/pickable = true
shapes/0/shape = SubResource( 55 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="collision" type="CollisionShape2D" parent="gravity_zone"]

shape = SubResource( 55 )
trigger = false
_update_shape_index = 0

[connection signal="body_enter" from="gravity_zone" to="." method="_on_gravity_zone_body_enter"]

[connection signal="body_exit" from="gravity_zone" to="." method="_on_gravity_zone_body_exit"]


